[CoreDB] Port Dao for Account domain

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -26,3 +26,5 @@ account.acceptTerms.assertTrue.message=You must accept the terms of use to regis
 
 error.global=Please fix the problems below.
 error.mismatch.account.password=Your passwords do not match. Please try again.
+
+error.duplicate.account.username=The username {0} is already taken.
